# server/handler/handshake.go
@@ -2,11 +2,10 @@ package handler
 
 import (
 	"encoding/hex"
+	"encoding/json"
 	"fmt"
-	"io"
 	"net"
 	"os"
-	"strings"
 	"time"
 
 	"github.com/labstack/echo/v4"
@@ -25,8 +24,7 @@ func (s Server) PostTlsHandshake(ctx echo.Context) error {
 	var serverResponse []byte
 	conn, err := net.DialTimeout("tcp", payload.Server+":"+fmt.Sprintf("%d", *payload.Port), 5*time.Second)
 	if err != nil {
-		fmt.Printf("net.Dial error: %v\n", err)
-		return ctx.JSON(500, "No")
+		return ctx.JSON(500, fmt.Sprintf("net.Dial error: %v", err))
 	}
 	defer conn.Close()
 
@@ -41,63 +39,65 @@ func (s Server) PostTlsHandshake(ctx echo.Context) error {
 	}
 	uconn := utls.UClient(conn, config, utls.HelloCustom)
 	if err := uconn.ApplyPreset(&spec); err != nil {
-		fmt.Printf("ApplyPreset error: %v\n", err)
-		return ctx.JSON(500, "No")
+		return ctx.JSON(500, fmt.Sprintf("ApplyPreset error: %v", err))
 	}
 
 	if err := uconn.SetClientRandom([]byte(payload.ClientRandom)); err != nil {
-		fmt.Printf("SetClientRandom error: %v\n", err)
-		return ctx.JSON(500, "No")
+		return ctx.JSON(500, fmt.Sprintf("SetClientRandom error: %v", err))
 	}
 
 	if err := uconn.Handshake(); err != nil {
-		fmt.Printf("uconn.Handshake() error: %v\n", err)
-		if serverResponse != nil {
-			fmt.Println("--- ServerResponse bytes on error ---")
-			fmt.Print(hex.Dump(serverResponse))
-			fmt.Println("-------------------------------------")
-		}
-		return ctx.JSON(500, "No")
+		return ctx.JSON(500, fmt.Sprintf("uconn.Handshake() error: %v", err))
 	}
 
-	fmt.Print(hex.Dump(convertRecordbytes(utls.ClientHelloRaw)))
-	fmt.Println("✅ TLS Handshake successful")
+	// fmt.Println(hex.Dump(utls.FullRecordBytes))
 
-	if serverResponse != nil {
-		fmt.Println("--- ServerResponse bytes ---")
-		fmt.Print(hex.Dump(serverResponse))
-		fmt.Println("--------------------------")
-	}
-
-	requestBuilder := &strings.Builder{}
-	requestBuilder.WriteString("GET / HTTP/1.1\r\n")
-	requestBuilder.WriteString("Host: " + payload.Server + "\r\n")
-	requestBuilder.WriteString("User-Agent: my-raw-client/1.0\r\n")
-	requestBuilder.WriteString("Connection: close\r\n")
-	requestBuilder.WriteString("\r\n")
-
-	request := requestBuilder.String()
-	fmt.Println("--- Sending Request ---")
-	fmt.Print(request)
-	fmt.Println("-----------------------")
-
-	_, err = uconn.Write([]byte(request))
+	responseBytes, err := json.Marshal(openapi.HandshakeResponse{
+		HandshakeSuccess:         true,
+		RawClientHello:           hex.EncodeToString(convertRecordbytes(utls.ClientHelloRaw)),
+		RawServerResponse:        hex.EncodeToString(serverResponse),
+		RawServerResponseDecoded: hex.EncodeToString(utls.FullRecordBytes),
+	})
 	if err != nil {
-		fmt.Printf("uconn.Write() error: %v\n", err)
-		return ctx.JSON(500, "No")
+		return ctx.JSON(500, fmt.Sprintf("json.Marshal error: %v", err))
 	}
+	return ctx.JSON(200, json.RawMessage(responseBytes))
 
-	response, err := io.ReadAll(uconn)
-	if err != nil {
-		fmt.Printf("io.ReadAll(uconn) error: %v\n", err)
-		return ctx.JSON(500, "No")
-	}
+	// fmt.Println("✅ TLS Handshake successful")
 
-	fmt.Println("\n--- Raw Response ---")
-	fmt.Println(string(response))
-	fmt.Println("--------------------")
+	// if serverResponse != nil {
+	// 	fmt.Println("--- ServerResponse bytes ---")
+	// 	fmt.Print(hex.Dump(serverResponse))
+	// 	fmt.Println("--------------------------")
+	// }
 
-	return ctx.JSON(200, "ok")
+	// requestBuilder := &strings.Builder{}
+	// requestBuilder.WriteString("GET / HTTP/1.1\r\n")
+	// requestBuilder.WriteString("Host: " + payload.Server + "\r\n")
+	// requestBuilder.WriteString("User-Agent: my-raw-client/1.0\r\n")
+	// requestBuilder.WriteString("Connection: close\r\n")
+	// requestBuilder.WriteString("\r\n")
+
+	// request := requestBuilder.String()
+	// fmt.Println("--- Sending Request ---")
+	// fmt.Print(request)
+	// fmt.Println("-----------------------")
+
+	// _, err = uconn.Write([]byte(request))
+	// if err != nil {
+	// 	fmt.Printf("uconn.Write() error: %v\n", err)
+	// 	return ctx.JSON(500, "No")
+	// }
+
+	// response, err := io.ReadAll(uconn)
+	// if err != nil {
+	// 	fmt.Printf("io.ReadAll(uconn) error: %v\n", err)
+	// 	return ctx.JSON(500, "No")
+	// }
+
+	// fmt.Println("\n--- Raw Response ---")
+	// fmt.Println(string(response))
+	// fmt.Println("--------------------")
 }
 
 func createClientHelloSpec(payload openapi.HandshakeRequest) utls.ClientHelloSpec {
@@ -105,7 +105,7 @@ func createClientHelloSpec(payload openapi.HandshakeRequest) utls.ClientHelloSpe
 
 	for i, v := range payload.KeyShares {
 		keyShares[i] = utls.KeyShare{
-			Group: utls.CurveID(stringToUint16(*v.Group)),
+			Group: utls.CurveID(stringToUint16(v.Group)),
 			// Data:  []byte(v.Data),
 		}
 	}
